change importfile: _toggler instead of toggler

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=ZCOOL+XiaoWei");
-@import "../styles/toogler.scss";
+@import "../styles/_toogler.scss";
 
 body,
 body * {
