--- a/src/styles/_toogler.scss
+++ b/src/styles/_toogler.scss
@@ -1,9 +1,14 @@
-.toggler {
-  border: 1px solid blue;
-}
+// .toggler {
+//   border: 1px solid blue;
+// }
 .checkbox-container {
-  display: inline-block;
-  position: relative;
+  border: 1px violet solid;
+
+  margin: 20px;
+}
+
+form {
+  border: 1px solid blue;
 }
 /// mother toggler
 .checkbox-container label {
@@ -15,7 +20,6 @@
   transition: all 0.3s ease-out;
   width: 45px;
   height: 25px;
-  z-index: 2;
 }
 // white ball
 .checkbox-container label::after {
@@ -29,7 +33,6 @@
   transition: transform 0.3s linear;
   width: 20px;
   height: 20px;
-  z-index: 3;
 }
 
 /// toggler moving from left to rights
